--- a/PhoneList/PhoneList/Content/Site.css
+++ b/PhoneList/PhoneList/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.image-profile{
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    background-repeat:no-repeat;
+}
