--- a/PhoneList/PhoneList/Views/Account/Register.cshtml
+++ b/PhoneList/PhoneList/Views/Account/Register.cshtml
@@ -44,14 +44,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @id = "txtPassword", @type = "password" } })
+                
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            <label class="control-label col-md-2">Retype your password</label>
+            <div class="col-md-10">
+                <label class="label-danger hidden" id="err">ERROR: Passwords do not match!</label>
+                <input type="password" class="form-control" id="txtConfirmPassword" />
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" id="btnSubmit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -60,3 +67,20 @@
 <div>
     @Html.ActionLink("Вернуться", "Index")
 </div>
+@section scripts{
+    <script type="text/javascript">
+        $(function () {
+            $("#btnSubmit").on('click', function (e) {
+                var password = $("#txtPassword").val();
+                var confirmPassword = $("#txtConfirmPassword").val();
+                if (password != confirmPassword) {
+                    $("#err").removeClass("hidden");
+                    return false;
+                } else {
+                    $("form").submit();
+                    return true;
+                }
+            });
+        });
+    </script>
+}
