--- a/PhoneList/PhoneList/Views/Main/AddressBook.cshtml
+++ b/PhoneList/PhoneList/Views/Main/AddressBook.cshtml
@@ -7,62 +7,88 @@
 
 <h2>AddressBook</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Age)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @foreach (var i in item.PhonesVM)
-            {
-                @Html.DisplayFor(x => i.PhoneNumber)<br />
-                @Html.DisplayFor(x => i.PhoneType)
-            }
-        </td>
-        <td>
-            @foreach (var i in item.AdressesVM)
-            {
-                @Html.DisplayFor(x => i.Country)<br />
-                @Html.DisplayFor(x => i.City)<br />
-                @Html.DisplayFor(x => i.Street)<br />
-                @Html.DisplayFor(x => i.HouseNo)
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@if (Model.Count() == 0)
+{
+    <div class="jumbotron">
+        <h2>Sorry</h2>
+        <p>You haven't any contacts yet.</p>
+        @Html.ActionLink("Create New", "CreatePerson", "Main", new { @class = "btn btn-success" })
+    </div>
 }
+else
+{
+    <p>
+        @Html.ActionLink("Create New", "CreatePerson")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Age)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.UserId)
+            </th>
+            <th></th>
+        </tr>
 
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.UserId)
+                </td>
+                <td>
+                    @if (item.PhonesVM.Count >= 0)
+                    {
+                        foreach (var i in item.PhonesVM)
+                        {
+                            @Html.DisplayFor(x => i.PhoneNumber)<br />
+                            @Html.DisplayFor(x => i.PhoneType)
+                        }
+                    }
+                    else
+                    {
+                        <p class="label-info">Person have not phones yet</p>
+                    }
+                </td>
+                <td>
+                    @if (item.AdressesVM.Count >= 0)
+                    {
+                        foreach (var i in item.AdressesVM)
+                        {
+                            @Html.DisplayFor(x => i.Country)<br />
+                            @Html.DisplayFor(x => i.City)<br />
+                            @Html.DisplayFor(x => i.Street)<br />
+                            @Html.DisplayFor(x => i.HouseNo)
+                        }
+                    }
+                    else
+                    {
+                        <p class="label-info">Person have not addresses yet</p>
+                    }
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+    </table>
+}
