--- a/PhoneList/PhoneList/Views/Main/Cabinet.cshtml
+++ b/PhoneList/PhoneList/Views/Main/Cabinet.cshtml
@@ -5,7 +5,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>UserViewModel</h4>
+        <h4>Your personal cabinet</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
