--- a/PhoneList/PhoneList/Views/Main/Index.cshtml
+++ b/PhoneList/PhoneList/Views/Main/Index.cshtml
@@ -4,10 +4,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-@using (Html.BeginForm())
+@if (User.Identity.IsAuthenticated)
 {
-    <input type="text" name="userId" placeholder="User id" />
-    <input type="submit" value="Show addressbook" />
+    <div class="col-md-4 img-title"></div>
+    <div class="col-md-8">
+        <h2>WELLCOME @User.Identity.Name</h2>
+        <h4>Addressbook for everyone</h4>
+        @Html.ActionLink("Address book", "Addressbook", "Main", new { @class = "btn btn-success" })
+    </div>
 }
+else
+{
+    <div class="col-md-4 img-title"></div>
+    <div class="col-md-8">
+        <h2>WELLCOME!!!</h2>
+        <h4>Addressbook for everyone</h4>
+        @Html.ActionLink("Log In", "Login", "Account", new { @class = "btn btn-primary" })
+        @Html.ActionLink("Register", "Register", "Account", new { @class = "btn btn-primary" })
+    </div>
+}
+
