--- a/PhoneList/PhoneList/Views/Main/Cabinet.cshtml
+++ b/PhoneList/PhoneList/Views/Main/Cabinet.cshtml
@@ -99,7 +99,7 @@
                     @Html.ValidationMessageFor(model => model.About, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            <div id="map"></div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" id="sbm_btn" value="Save" class="btn btn-default" />
@@ -152,4 +152,7 @@
             $("#sbm_btn").click();
         });
     </script>
+
+
+
 }
