--- a/PhoneList/PhoneList/Views/Main/CreatePerson.cshtml
+++ b/PhoneList/PhoneList/Views/Main/CreatePerson.cshtml
@@ -49,6 +49,7 @@
             </div>
             <br />
         </div>
+        <div id="map"></div>
 
         <div class="form-group">
             <div class="col-md-10 address_group">
@@ -194,4 +195,36 @@
 
         });
     </script>
+<script type="text/javascript">
+
+var map;
+function initMap() {
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: -34.397, lng: 150.644},
+    zoom: 8
+  });
+
+  var latlng = new google.maps.LatLng("18.92488028662047", "72.8232192993164");
+
+  var geocoder = geocoder = new google.maps.Geocoder();
+  geocoder.geocode({ 'address': "Днепропетровск, Глинки, 1" }, function (results, status) {
+      if (status == google.maps.GeocoderStatus.OK) {
+          map.setCenter(results[0].geometry.location);
+          var marker = new google.maps.Marker({
+              map: map,
+              position: results[0].geometry.location
+          });
+          if (results[0]) {
+              alert("Location: " + results[0].formatted_address);
+          }
+      }
+  });
+}
+
+
+
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj9wjc6qirHgL3ktrDuah1dO1-5WXEI_M&callback=initMap">
+</script>
 }
