--- a/PhoneList/PhoneList/Views/Main/CreatePerson.cshtml
+++ b/PhoneList/PhoneList/Views/Main/CreatePerson.cshtml
@@ -49,7 +49,7 @@
             </div>
             <br />
         </div>
-        <div id="map"></div>
+        
 
         <div class="form-group">
             <div class="col-md-10 address_group">
@@ -57,15 +57,15 @@
                 <div>
                     <label>Country</label>
                     <select class="form-control" id="countries"><option></option></select>
-                    <label>City</label><i class="fa fa-spinner fa-spin krutilka hidden" id="spinner"></i>
-                    <select class="form-control" id="cities">
+                    <label>City</label><i class="fa fa-spinner fa-spin krutilka hidden" id="spinner" ></i>
+                    <select class="form-control" id="cities" onblur="CreatePersonFieldChange()">
                        
                     </select>
                     
                     <label>Street</label>
-                    <input class="form-control" type="text" name="street" />
+                    <input class="form-control" type="text" name="street" id="street" onblur="CreatePersonFieldChange()"/>
                     <label>House/apartment</label>
-                    <input class="form-control" type="text" name="houseN_apartment" />
+                    <input class="form-control" type="text" name="houseN_apartment" onblur="CreatePersonFieldChange()" id="houseNo"/>
                 </div>
             </div>
         </div>
@@ -84,6 +84,8 @@
             </div>
         </div>
     </div>
+
+    <div id="mapCreatePerson" class="hidden"></div>
 }
 
 <div>
@@ -93,18 +95,7 @@
 
 @section scripts{
     <script type="text/javascript">
-
-        //$(document).ready(function () {
-        //    $("form").submit(function (e) {
-        //        e.preventDefault();
-        //        GatherAll();
-
-        //    })
-        //});
-
-
         function GatherAll() {
-
             var data = {
                 "FirstName": $("#FirstName").val(),
                 "LastName": $("#LastName").val(),
@@ -120,7 +111,6 @@
                     "PhoneNumber": current[1].value,
                 };
                 phones.push(extend);
-
             })
             $.extend(data,
                 {
@@ -136,7 +126,6 @@
                 success: CRUDResult
             });
         }
-
 
         $(document).ready(function () {
             $.ajax({
@@ -163,9 +152,6 @@
                 countrySelect.on("change", function () {
 
                     var selected = countrySelect.find('option:selected').val();
-
-                    
-
                     $.ajax({
                         type: 'POST',
                         //data: selected,
@@ -192,39 +178,6 @@
                         });
                     }, 1000);
                 }
-
         });
     </script>
-<script type="text/javascript">
-
-var map;
-function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: -34.397, lng: 150.644},
-    zoom: 8
-  });
-
-  var latlng = new google.maps.LatLng("18.92488028662047", "72.8232192993164");
-
-  var geocoder = geocoder = new google.maps.Geocoder();
-  geocoder.geocode({ 'address': "Днепропетровск, Глинки, 1" }, function (results, status) {
-      if (status == google.maps.GeocoderStatus.OK) {
-          map.setCenter(results[0].geometry.location);
-          var marker = new google.maps.Marker({
-              map: map,
-              position: results[0].geometry.location
-          });
-          if (results[0]) {
-              alert("Location: " + results[0].formatted_address);
-          }
-      }
-  });
-}
-
-
-
-</script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj9wjc6qirHgL3ktrDuah1dO1-5WXEI_M&callback=initMap">
-</script>
 }
