--- a/PhoneList/PhoneList/Views/Shared/_Layout.cshtml
+++ b/PhoneList/PhoneList/Views/Shared/_Layout.cshtml
@@ -25,21 +25,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li class="navbar-right">@Html.ActionLink("Address book", "Addressbook", "Main")</li>
-                        <li class="navbar-right">
-                            <input type="text" class="input-sm" id="searchField"/>
-                            <div class="dropdown">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="searchDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    Search by
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="searchDropDown">
-                                    <li><a href="#" name="byAll" onclick="Search('byAll')">All</a></li>
-                                    <li><a href="#" name="byName" onclick="Search('byName')">Name</a></li>
-                                    <li><a href="#" name="byAddress" onclick="Search('byAddress')">Address</a></li>
-                                    <li><a href="#" name="byPhone" onclick="Search('byPhone')">Phone</a></li>
-                                </ul>
-                            </div>
-                        </li>
+                        
                     }
                 </ul>
 
@@ -63,8 +49,24 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <ul class="nav navbar-nav navbar-right">
+                        <li class="form-inline form-group search-box ">
+                            <input type="text" class="input-sm search-box_input" id="searchField" />
+                            <div class="dropdown search-box_button">
+                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="searchDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    Search by
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="searchDropDown">
+                                    <li><a href="#" name="byAll" onclick="Search('byAll')">All</a></li>
+                                    <li><a href="#" name="byName" onclick="Search('byName')">Name</a></li>
+                                    <li><a href="#" name="byAddress" onclick="Search('byAddress')">Address</a></li>
+                                    <li><a href="#" name="byPhone" onclick="Search('byPhone')">Phone</a></li>
+                                </ul>
+                            </div>
+                        </li>
                         <li class="navbar-right">@Html.ActionLink("Log out", "Logout", "Account")</li>
                         <li class="navbar-right" title="Go to personal cabinet">@Html.ActionLink(User.Identity.Name, "Cabinet", "Main")</li>
+
                     </ul>
                 }
                 else
