--- a/PhoneList/PhoneList/Content/Site.css
+++ b/PhoneList/PhoneList/Content/Site.css
@@ -57,3 +57,17 @@ textarea {
     width: 100%;
     border-radius:15px;
 }
+
+.search-box{
+    display: inline-block;
+    margin-top: 10px;
+    /*width: 400px;*/
+}
+
+.search-box_input{
+    display: inline-block;
+}
+
+.search-box_button{
+    display: inline-block;
+}
